# secagent-riskops

./: .gitignore  CONTRIBUTING.md  GITHUB_PROJECT_SETUP.md  Makefile  PROJECT_CHARTER.md  README.md  ROADMAP.md  SECURITY.md  SYSTEM_ARCHITECTURE.md  THREAT_MODEL.md  V016_UPDATE_INSTRUCTIONS.md  V017_UPDATE_INSTRUCTIONS.md  V018_MACOS_UPDATE_INSTRUCTIONS.md  V019_UPDATE_INSTRUCTIONS.md  github-issues-v015.json  github-issues-v016.json  github-issues-v017.json  github-issues-v018.json  github-issues-v019.json  github-issues.json  github-labels.json  github-milestones-v015.json  github-milestones-v016.json  github-milestones-v017.json  github-milestones-v018.json  github-milestones-v019.json  github-milestones.json  pyproject.toml  requirements.txt
backend/: README.md
docs/: agent-integration.md  architecture.md  assessment-authorization-and-rules-of-engagement.md  assessment-scope-model.md  authorized-security-validation.md  autonomy-levels.md  capability-boundaries.md  crawler-safety-governance.md  curated-knowledge-intake.md  data-model.md  evaluation-replay.md  external-intelligence-ingestion.md  grc-workflow.md  implementation-status.md  manual-upload-security.md  product-vision.md  public-repository-security.md  remediation-workflow.md  security-validation-workflow.md  soc-workflow.md  source-registry.md  validation-safety-policy.md  workflow-runtime.md
frontend/: README.md
scripts/: apply_v015_update.py  apply_v016_update.py  apply_v017_update.py  apply_v018_update.py  apply_v019_update.py  check_public_repo.sh  create_github_items.sh  create_issues.py  (+12 more)
(+61 files in other folders)
